tests/specs/check/wasm/check.out
Download http://localhost:4545/wasm/math.wasm
Check file:///[WILDLINE]/main.ts
TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
console.log(add(1, ""));
                   ~~
    at file:///[WILDLINE]/main.ts:3:20

error: Type checking failed.
